logs/Slang/generated/hdlconv/hdlconvertor_p764.sv.log
name: hdlconvertor_p764
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p764.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p764.sv:19:15: error: unknown interface 'interface'
module memMod(interface a); // Uses just the interface keyword
              ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p764.sv:19:25: error: redefinition of 'a' as different kind of symbol
module memMod(interface a); // Uses just the interface keyword
                        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p764.sv:21:6: note: previous definition here
task a.Read; // Read method
     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p764.sv:25:6: error: redefinition of 'a'
task a.Write;
     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p764.sv:21:6: note: previous definition here
task a.Read; // Read method
     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p764.sv:30:15: error: unknown interface 'interface'
module cpuMod(interface b);
              ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p764.sv:42:19: error: hierarchical names are not allowed in constant expressions
memMod mem(sb_intf.slave); // exports the Read and Write tasks
           ~~~~~~~^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p764.sv:43:19: error: hierarchical names are not allowed in constant expressions
cpuMod cpu(sb_intf.master); // imports the Read and Write tasks
           ~~~~~~~^
